# python-project-template

./: .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  layout.md  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: lint.yml
docs/: architecture.md  basedpyright.md  commands.md  hooks.md  maintenance.md  mermaid-guidelines.md  plans-guide.md  playwright-cli-guidelines.md  pr-process.md  pr-review-guide.md  prd-guide.md  project-setup.md  python-guide-uv.md
docs/archive/plans/: 2026-03-08-documentation-design.md  2026-03-08-documentation-framework.md
docs/decisions/: 001-uv-package-manager.md  002-ruff-linter-formatter.md  003-basedpyright-type-checker.md  004-prek-git-hooks.md  005-prettier-markdown.md  006-dual-layer-hook-architecture.md  007-pnpm-node-tooling.md  index.md
docs/designs/: index.md
docs/plans/: 2026-03-08-documentation-design.md  2026-03-08-documentation-framework.md  index.md
docs/python-guide/: index.md  module-structure.md  naming.md  style.md  tests.md  type-hints.md
docs/specs/: index.md
scripts/: bump_prd.py  setup.sh
scripts/setup/: README.md  install-claude-plugins.sh  install-deps.sh  install-playwright-cli.sh  install-pnpm.sh  install-python.sh  install-skills.sh  verify-setup.sh  verify.sh
scripts/tools/: basedpyright-lint.sh  mdformat-fix.sh  post-write-lint.sh  prettier-fix.sh  proselint-warn.sh  ruff-fix.sh  shellcheck-lint.sh  taplo-fmt.sh  yamllint-fmt.sh
